Remove desserts.html and update index.html to link to the new desserts/index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             occasions.
           </p>
           <button class="view-recipe-button">
-            <a href="desserts.html">View Recipe</a>
+            <a href="desserts/index.html">View Recipe</a>
           </button>
         </div>
       </section>
