Remove old recipe pages and update links to reflect new structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yusa Chef's Recipes</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header>
     <div style="display: flex; align-items: center; flex-grow: 1">
-        <a href="index.html" style="text-decoration: none; color: black">
+        <a href="/" style="text-decoration: none; color: black">
             <img
               src="images/logo-chef.png"
               alt="Yemek 1"
@@ -20,8 +20,8 @@
         <h1 style="font-size: 44px ;color: green;" >YUSA CHEF'S RECIPES</h1>
       </div>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
+        <a href="/">Home</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
     <main style="display: flex; flex-direction: column; align-items: center">
@@ -55,7 +55,7 @@
             that is perfect for family gatherings or special occasions.
           </p>
           <button class="view-recipe-button">
-            <a href="main-course.html">View Recipe</a>
+            <a href="/main-course">View Recipe</a>
           </button>
         </div>
         <div class="card">
@@ -73,7 +73,7 @@
             start to any meal or a light, nutritious snack on its own.
           </p>
           <button class="view-recipe-button">
-            <a href="appetizers.html">View Recipe</a>
+            <a href="appetizers">View Recipe</a>
           </button>
         </div>
         <div class="card" >
@@ -92,7 +92,7 @@
             occasions.
           </p>
           <button class="view-recipe-button">
-            <a href="desserts/index.html">View Recipe</a>
+            <a href="desserts">View Recipe</a>
           </button>
         </div>
       </section>
