--- a/appetizers/index.html
+++ b/appetizers/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ekmek Kataifi</title>
+    <title>Greek Salad</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -26,12 +26,12 @@
     </header>
     <main class="recipe-main">
       <section class="media-section">
-        <h1>Ekmek Kataifi</h1>
-        <img src="/images/ekmek-kadaifi.jpg" alt="Ekmek Kataifi" />
+        <h1>Greek Salad</h1>
+        <img src="/images/greek-salad.jpg" alt="Greek Salad" />
         <iframe
           width="800"
           height="400"
-          src="https://www.youtube.com/embed/M2YUxmFta9U?si=GsNQRcoxUaAyDwCS"
+          src="https://www.youtube.com/embed/dDhOpHcAJGo?si=c_3fPRoQLWqgleUi&amp;start=3"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -39,15 +39,21 @@
           allowfullscreen
         ></iframe>
       </section>
+
       <section class="recipe-detail">
         <aside class="left-aside" style="width: 400px">
           <h3>Ingredients</h3>
           <ul>
-            <li>1 ready-made ekmek kataifi (or homemade)</li>
-            <li>3 cups granulated sugar</li>
-            <li>5 cups water</li>
-            <li>Few drops of lemon juice</li>
-            <li>Clotted cream (kaymak) for serving</li>
+            <li>3 tomatoes (diced)</li>
+            <li>1 cucumber (sliced)</li>
+            <li>1 red onion (thinly sliced)</li>
+            <li>1 green bell pepper (sliced)</li>
+            <li>100g black olives</li>
+            <li>150g feta cheese (cubed)</li>
+            <li>2 tablespoons olive oil</li>
+            <li>1 tablespoon red wine vinegar</li>
+            <li>1 teaspoon dried oregano</li>
+            <li>Salt and black pepper to taste</li>
           </ul>
         </aside>
 
@@ -55,34 +61,31 @@
           <h3>Instructions</h3>
           <ol>
             <li>
-              <strong>Prepare the kadayif:</strong> Place the kadayif in a wide
-              pan and pour 1 cup of warm water over it. Let it soften.
+              <strong>Prepare the vegetables:</strong> Wash and chop tomatoes,
+              cucumber, onion, and bell pepper.
             </li>
             <li>
-              <strong>Make the syrup:</strong> In a separate pot, mix sugar and
-              water. Bring to a boil and add a few drops of lemon juice. Simmer
-              for 10 minutes.
+              <strong>Combine in bowl:</strong> Place all vegetables and olives
+              in a large salad bowl.
             </li>
             <li>
-              <strong>Soak the kadayif:</strong> Gradually pour the hot syrup
-              evenly over the softened kadayif.
+              <strong>Add feta:</strong> Gently fold in the cubed feta cheese
+              without breaking it up.
             </li>
             <li>
-              <strong>Simmer gently:</strong> Cook on low heat, occasionally
-              spooning syrup over the top until it absorbs fully and caramelizes
-              slightly.
+              <strong>Make the dressing:</strong> Mix olive oil, red wine
+              vinegar, oregano, salt and pepper in a small bowl.
             </li>
             <li>
-              <strong>Cool and serve:</strong> Let it cool slightly and serve
-              with a dollop of kaymak or ice cream.
+              <strong>Dress and serve:</strong> Pour the dressing over the
+              salad, toss lightly, and serve fresh.
             </li>
           </ol>
 
-          <p><em>Enjoy your Ekmek Kataifi!</em></p>
+          <p><em>Enjoy your refreshing Greek Salad!</em></p>
         </aside>
       </section>
     </main>
-
     <footer>
       <p>&copy; 2025 Yusa Chef's Website. All rights reserved.</p>
     </footer>
