fix: correct filename case for Greek Salad image

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="card">
           <img
-            src="images/Greek-Salad.jpg"
+            src="images/greek-salad.jpg"
             alt="Greek Salad"
             width="320px"
             height="320px"
